# agent-first-config

./: Cargo.toml  LICENSE  README.md  build.rs  clippy.toml  spore.core.json
.github/workflows/: ci.yml  release.yml
docs/: cli.md
scripts/: cross-parser-smoke.sh  forward-validation.sh  test.sh
skills/agent-first-config/: SKILL.md
skills/agent-first-config/agents/: openai.yaml
src/: coerce.rs  error.rs  keyed.rs  lib.rs  path.rs  schema.rs  traverse.rs  typed.rs  value.rs
src/format/: dotenv.rs  ini.rs  json.rs  mod.rs  toml.rs  yaml.rs
tests/: e2e.rs
