[package]
name = "agent-first-config"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
description = "Generic dot-path accessor for JSON/TOML/YAML/dotenv/INI configs, usable both as a Rust library and as a standalone afconfig CLI binary. The library is the primary interface: spores embed it for generic dot-path access without writing a dispatch table per field. The CLI wraps the same logic for shell scripts and quick one-off reads or edits from any language."
license = "MIT"
repository = "https://github.com/agentfirstkit/agent-first-config"
exclude = [".github/"]

[lib]
name = "agent_first_config"

[[bin]]
name = "afconfig"
path = "src/bin/afconfig.rs"
required-features = ["cli"]

[features]
# Batteries included by default: all format backends and the afconfig binary.
# Library consumers that want a smaller dependency graph can opt out with
# `default-features = false` and enable only the formats they use.
default = ["json", "toml", "yaml", "dotenv", "ini", "cli"]
json = ["dep:serde_json"]
toml = ["dep:toml", "dep:toml_edit"]
yaml = ["dep:noyalib"]
dotenv = []
ini = []
schema = []
cli = ["dep:clap", "dep:serde_json", "dep:agent-first-data", "agent-first-data/stream-redirect"]
cli-help = ["cli", "agent-first-data/cli-help", "agent-first-data/cli-help-markdown"]

[dependencies]
serde = { version = "1", features = ["derive"] }

[dependencies.serde_json]
version = "1"
optional = true
# No extra features on purpose: Cargo unifies features across the whole graph,
# so anything enabled here is forced onto every consumer's own serde_json. The
# Value IR collapses numbers to i64/f64 and uses a sorted BTreeMap, so neither
# `arbitrary_precision` nor `preserve_order` would buy afconfig anything — they
# would only bloat consumers' `serde_json::Value`.

[dependencies.toml]
version = "1"
optional = true

[dependencies.toml_edit]
version = "0.25"
optional = true

[dependencies.noyalib]
version = "0.0.15"
features = ["lossless-u64"]
optional = true

[dependencies.clap]
version = "4"
features = ["derive"]
optional = true

[dependencies.agent-first-data]
version = "0.17.3"
optional = true

[dev-dependencies]
libc = "0.2"
tempfile = "3"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
print_stdout = "deny"
print_stderr = "deny"
# Style-only lint that newer clippy defaults to allow; the MSRV (1.88) clippy
# still warns on `"{}", x` vs `"{x}"`. Keep it off to avoid version-skew churn.
uninlined_format_args = "allow"
